Bug#16385, Partitions: crash when updating a range partitioned NDB table - too little space was allocated for receiving events, partition uses extra column in table